new proj/src/objects/GE_Single_Org_History__c.object
<CustomObject>
    <fields>
        <fullName>Changed_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By_Id__c</fullName>
        <label>Created By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Id__c</fullName>
        <externalId>true</externalId>
        <label>History Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Single Org History</label>
    <nameField>
        <label>Single Org History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Single Org History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>